<package>
  <name>rqt_dynamic_graph</name>
  <version>0.3.0</version>
  <description>rqt_dynamic_graph
  is a Python GUI plugin providing an interactive Python console.</description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <maintainer email="isao.saito@mavs.uta.edu">Isaac Saito</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_dynamic_graph</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <run_depend>dynamic_graph_bridge</run_depend>
  <run_depend>dynamic_graph_manager</run_depend>

  <export>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
